--- a/scss/public.scss
+++ b/scss/public.scss
@@ -3,14 +3,48 @@
 
 @charset "utf-8";
 
-// @font-face {
-//   font-family: 'nbk';
-//   src: url('/font/nobk-webfont.eot');
-//   src: url('/font/nobk-webfont.eot?#iefix') format('embedded-opentype'),
-//        url('/font/nobk-webfont.woff') format('woff'),
-//        url('/font/nobk-webfont.ttf') format('truetype'),
-//        url('/font/nobk-webfont.svg#nobel-bookregular') format('svg');
-// }
+@font-face {
+    font-family: 'nbd';
+    src: url('/font/nobd-webfont.eot');
+    src: url('/font/nobd-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/font/nobd-webfont.woff') format('woff'),
+         url('/font/nobd-webfont.ttf') format('truetype'),
+         url('/font/nobd-webfont.svg#nobel-boldregular') format('svg');
+}
+@font-face {
+    font-family: 'nbk';
+    src: url('/font/nobk-webfont.eot');
+    src: url('/font/nobk-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/font/nobk-webfont.woff') format('woff'),
+         url('/font/nobk-webfont.ttf') format('truetype'),
+         url('/font/nobk-webfont.svg#nobel-bookregular') format('svg');
+}
+@font-face {
+    font-family: 'nbl';
+    src: url('/font/nobl-webfont.eot');
+    src: url('/font/nobl-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/font/nobl-webfont.woff') format('woff'),
+         url('/font/nobl-webfont.ttf') format('truetype'),
+         url('/font/nobl-webfont.svg#nobel-blackregular') format('svg');
+}
+@font-face {
+    font-family: 'nlt';
+    src: url('/font/nolt-webfont.eot');
+    src: url('/font/nolt-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/font/nolt-webfont.woff') format('woff'),
+         url('/font/nolt-webfont.ttf') format('truetype'),
+         url('/font/nolt-webfont.svg#nobel-lightregular') format('svg');
+}
+@font-face {
+    font-family: 'nr';
+    src: url('/font/nor-webfont.eot');
+    src: url('/font/nor-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/font/nor-webfont.woff') format('woff'),
+         url('/font/nor-webfont.ttf') format('truetype'),
+         url('/font/nor-webfont.svg#nobel-regularregular') format('svg');
+}
+
+$main-blue: #017eff;
 
 * {
   &, &:after, &:before {
@@ -33,9 +67,10 @@ body {
   margin: 0;
   padding: 0;
   color: #000;
-  
-  font-family: 'nbk', 'Noto Sans TC', 'Roboto', "Helvetica Neue", HelveticaNeue, Helvetica, Arial, sans-serif;
-  font-weight: 300;
+
+  font:normal 14px/20px "新細明體";
+  font-family:"nbk", "microsoft yahei","微軟正黑體",arial,sans-serif;
+  font-family:"nbk", "微軟正黑體",arial,sans-serif;
 
   text-size-adjust: none;
   -webkit-text-size-adjust:none;
@@ -67,6 +102,25 @@ header {
   background-color: white;
 }
 
+footer {
+  width: 100%;
+  max-width: 990px;
+  margin: 0 auto;
+}
+
+hr {
+  color: $gray-500;
+  opacity: 1;
+}
+
+.mobile-close {
+  @include range-width(0, 720px) {
+    display: none !important;
+  }
+}
+
+
+// banner
 .swiper {
   width: 100%;
   height: 485px;
@@ -75,7 +129,6 @@ header {
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: red;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -88,14 +141,147 @@ header {
   }
 }
 
+.swiper-pagination-bullet {
+  background: white !important;
+  opacity: 1 !important;
+}
+
+
+.swiper-pagination-bullet-active {
+  background: $main-blue !important;
+} 
+
+.swiper-button-next, .swiper-button-prev {
+  color: white !important;
+  opacity: .5 !important;
+
+  &:hover {
+    opacity: 1 !important;
+  }
+}
+
+
+
+// bo
+.ticket-nav {
+  font-size: 1.2rem !important;
+  color: black !important;
+  background-color: transparent !important;
+  border-radius: 0 !important;
+  padding-bottom: 13px;
+  padding-top: 0 !important;
+
+  &.active {
+    color: $main-blue !important;
+    border-bottom: 2px solid $main-blue;
+  }
+}
+
+
+
+// boxs
 .topboxs {
   display: inline-block;
+  position:relative;
+  z-index: 10;
   width: 100%;
-  height: 90px;
+  box-shadow: 1px 1px 10px 2px rgba(0, 0, 0, 0.1);
+}
+
+.navboxs {
+  display: inline-block;
+  width: 100%;
   background-image: url(../images/doll-bg.png);
   background-repeat: repeat;
-  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
+
+.mainboxs {
+  width: 100%;
+  max-width: 990px;
+  margin: 0 auto;
+}
+
+.iteam-imgboxs01 {
+  display: inline-block;
+  width: 100%;
+  height: 160px;
+}
+
+
+
+// font
+.f13 {
+  color: $gray-500;
+  font-size: 1rem;
+}
+
+
+
+// link
+.social-font {
+  font-size: 1.8rem;
+  color: black;
+
+  &.youtube {
+    font-size: 2rem;
+    margin-top: 5px;
+  }
+
+  &:hover {
+    color: $gray-600;
+  }
+}
+
+.footerlink {
+  font-size: 1.2rem;
+  color: $gray-800;
+
+  &:after {
+    display: inline-block;
+    content: '|';
+    padding: 0 10px;
+    vertical-align: baseline !important;
+  }
+
+  &:hover {
+    color: $gray-600;
+
+    &:after {
+      color: black;
+    }
+  }
+
+  &:last-child {
+    &:after {
+      display: none;
+    }
+  }
+}
+
+
+
+// btn
+.moreBtn {
+  padding: 10px 20px;
+  border: 1px solid $gray-200;
+  background: url(../images/btn-t1-re-1.gif) left top repeat-x #eeeff1;
+
+  &:hover {
+    color: $main-blue;
+  }
+}
+
+
+
+// 寫完刪除
+.test-bg {
+  background-color: rgba(0, 128, 0, 0.2);
+}
+
+.test-border {
+  border: 1px solid rgba(255, 0, 0, .3);
+}
+
 
 
 
