--- a/css/bootstrap/bootstrap-reboot.css
+++ b/css/bootstrap/bootstrap-reboot.css
@@ -63,8 +63,8 @@ sub { bottom: -.25em; }
 
 sup { top: -.5em; }
 
-a { color: #09216C; text-decoration: underline; }
-a:hover { color: #071a56; }
+a { color: #017eff; text-decoration: underline; }
+a:hover { color: #0165cc; }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover { color: inherit; text-decoration: none; }
 
