--- a/scss/bootstrap/_variables.scss
+++ b/scss/bootstrap/_variables.scss
@@ -41,7 +41,7 @@ $grays: (
 // fusv-enable
 
 // scss-docs-start color-variables
-$blue:    #09216C !default;
+$blue:    #017eff !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #d63384 !default;
