--- a/scss/public.scss
+++ b/scss/public.scss
@@ -98,8 +98,12 @@ button {
 header {
   display: inline-block;
   width: 100%;
-  height: 100px;
   background-color: white;
+  padding: 30px 0;
+
+  @include range-width(0, 720px) {
+    padding: 25px 0;
+  }
 }
 
 footer {
@@ -114,10 +118,19 @@ hr {
 }
 
 .mobile-close {
-  @include range-width(0, 720px) {
+  display: inline-block !important;
+  @include range-width(0, 770px) {
     display: none !important;
   }
 }
+
+.mobile-open {
+  display: none !important;
+  @include range-width(0, 770px) {
+    display: inline-block !important;
+  }
+}
+
 
 
 // banner
@@ -177,6 +190,10 @@ hr {
   }
 }
 
+.btn-check:focus + .btn, .btn:focus {
+  box-shadow: 0 0 0 0rem rgba(1, 126, 255, 0.25) !important;
+}
+
 
 
 // boxs
@@ -207,12 +224,88 @@ hr {
   height: 160px;
 }
 
+.titleboxs {
+  display: inline-block;
+  width: 100%;
+  background-color: rgba(0, 0, 0, .7);
+  padding: 8px 10px;
+
+  .title-text {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    color: white;
+    font-size: 1.3rem;
+  }
+}
+
+.flagBoxs {
+  width: 28px;
+  height: 28px;
+  top: 10px;
+  right: 10px;
+  background-image: url(../images/flag.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
+  text-align: center;
+  font-size: .9rem;
+}
+
+.logoboxs {
+   @include range-width(0, 720px) {
+    height: 20px;
+  }
+}
+
+.h-iconboxs {
+  @include range-width(0, 720px) {
+    height: 20px;
+  }
+}
+
+.mob-serach {
+  @include range-width(0, 720px) {
+    height: 25px;
+  }
+}
+
+.mobile-header {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 80px;
+  background-image: url(../images/mobile-headerBg.png);
+  background-repeat: no-repeat;
+  background-position: top left;
+  background-size: cover;
+}
+
 
 
 // font
 .f13 {
   color: $gray-500;
   font-size: 1rem;
+}
+
+.cupon-text {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 1rem;
+  height: 60px;
+}
+
+.label-text {
+  border-radius: 0 !important;
+  background-color: transparent !important;
+  color: $gray-500;
+  border: 1px solid $gray-500;
 }
 
 
@@ -225,6 +318,14 @@ hr {
   &.youtube {
     font-size: 2rem;
     margin-top: 5px;
+  }
+
+  &.h-arrow {
+    font-size: 2.6rem;
+
+    @include range-width(0, 720px) {
+      font-size: 1.6rem;
+    }
   }
 
   &:hover {
@@ -262,12 +363,27 @@ hr {
 
 // btn
 .moreBtn {
-  padding: 10px 20px;
+  font-size: 1.1rem;
+  padding: 8px 20px;
   border: 1px solid $gray-200;
-  background: url(../images/btn-t1-re-1.gif) left top repeat-x #eeeff1;
+  background:linear-gradient(#f6f4f5, #f5f5f5, #eeeff1);
+  // background: url(../images/btn-t1-re-1.gif) left top repeat-x #eeeff1;
 
   &:hover {
     color: $main-blue;
+    background:linear-gradient(#eeeff1, #f5f5f5, #f6f4f5);
+  }
+}
+
+.btn-black {
+  border-radius: 0 !important;
+  background-color: black;
+  color: white;
+  font-size: 1.2rem;
+
+  &:hover {
+    color: white !important;
+    background-color: $main-blue !important;
   }
 }
 
