--- a/css/public.css
+++ b/css/public.css
@@ -3013,6 +3013,8 @@ textarea.form-control-lg { min-height: calc(1.5em + (1rem + 2px)); }
 @font-face { font-family: 'nr'; src: url("/font/nor-webfont.eot"); src: url("/font/nor-webfont.eot?#iefix") format("embedded-opentype"), url("/font/nor-webfont.woff") format("woff"), url("/font/nor-webfont.ttf") format("truetype"), url("/font/nor-webfont.svg#nobel-regularregular") format("svg"); }
 *, *:after, *:before { vertical-align: middle; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; -moz-osx-font-smoothing: subpixel-antialiased; -webkit-font-smoothing: subpixel-antialiased; -moz-font-smoothing: subpixel-antialiased; -ms-font-smoothing: subpixel-antialiased; -o-font-smoothing: subpixel-antialiased; }
 
+.ztop { z-index: 1050 !important; }
+
 html { font-size: 13px; }
 
 body { position: relative; display: inline-block; width: 100%; margin: 0; padding: 0; color: #000; font: normal 14px/20px "新細明體"; font-family: "nbk", "microsoft yahei","微軟正黑體",arial,sans-serif; font-family: "nbk", "微軟正黑體",arial,sans-serif; text-size-adjust: none; -webkit-text-size-adjust: none; background-color: white; }
@@ -3053,9 +3055,18 @@ hr { color: #adb5bd; opacity: 1; }
 
 .btn-check:focus + .btn, .btn:focus { box-shadow: 0 0 0 0rem rgba(1, 126, 255, 0.25) !important; }
 
+.modal-header { border-bottom: 0 !important; }
+
+.form-control:focus { border-color: #ced4da !important; box-shadow: 0 0 0 0rem rgba(1, 126, 255, 0.25) !important; }
+
+.offcanvas-top { top: 665px; }
+@media screen and (max-width: 769px) and (min-width: 0) { .offcanvas-top { top: 155px; } }
+
 .topboxs { display: inline-block; position: relative; z-index: 10; width: 100%; box-shadow: 1px 1px 10px 2px rgba(0, 0, 0, 0.1); }
 
 .navboxs { display: inline-block; width: 100%; background-image: url(../images/doll-bg.png); background-repeat: repeat; }
+
+.memberBoxsTitle { display: inline-block; width: 100%; background-image: url(../images/doll-bg.png); background-repeat: repeat; }
 
 .mainboxs { width: 100%; max-width: 990px; margin: 0 auto; }
 
@@ -3074,11 +3085,18 @@ hr { color: #adb5bd; opacity: 1; }
 
 .mobile-header { display: flex; align-items: center; width: 100%; height: 80px; background-image: url(../images/mobile-headerBg.png); background-repeat: no-repeat; background-position: top left; background-size: cover; }
 
+.noteBoxs { display: inline-block; width: 100%; background-color: #adb5bd; color: white; font-size: 1rem; padding: 10px; }
+
 .f13 { color: #adb5bd; font-size: 1rem; }
+
+.f9 { font-size: .9rem; }
 
 .cupon-text { display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 3; overflow: hidden; text-overflow: ellipsis; font-size: 1rem; height: 60px; }
 
 .label-text { border-radius: 0 !important; background-color: transparent !important; color: #adb5bd; border: 1px solid #adb5bd; }
+
+.searchText { display: inline-block; width: 100%; font-size: 1.3rem; color: black; }
+.searchText:before { display: inline-block; vertical-align: top; content: ''; width: 3px; height: 20px; background-color: black; margin-right: 5px; }
 
 .social-font { font-size: 1.8rem; color: black; }
 .social-font.youtube { font-size: 2rem; margin-top: 5px; }
