--- a/css/public.css
+++ b/css/public.css
@@ -3062,6 +3062,19 @@ hr { color: #adb5bd; opacity: 1; }
 .offcanvas-top { top: 665px; }
 @media screen and (max-width: 769px) and (min-width: 0) { .offcanvas-top { top: 155px; } }
 
+.accordion-item { border: 0 !important; }
+
+.accordion-header { border-top: 1px solid #e9ecef; }
+
+.accordion-button:not(.collapsed) { color: black; background-color: #fff; box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.125); }
+
+.accordion-body { color: #495057; font-size: 1.2rem; padding: 1rem 1.25rem 1rem 4rem !important; }
+@media screen and (max-width: 439px) and (min-width: 0) { .accordion-body { padding: 1rem 1.25rem !important; } }
+
+.accordion-button::after { background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"/></svg>') !important; }
+
+.accordion-button:not(.collapsed)::after { background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8"/></svg>') !important; }
+
 .topboxs { display: inline-block; position: relative; z-index: 10; width: 100%; box-shadow: 1px 1px 10px 2px rgba(0, 0, 0, 0.1); }
 
 .navboxs { display: inline-block; width: 100%; background-image: url(../images/doll-bg.png); background-repeat: repeat; }
