--- a/scss/public.scss
+++ b/scss/public.scss
@@ -217,14 +217,37 @@ hr {
   }
 }
 
-// .modal-backdrop {
-//   &.searchUse {
-//     top: 665px;
-//     @include range-width(0, 770px) {
-//       top: 155px;
-//     }
-//   }
-// }
+.accordion-item {
+  border: 0 !important;
+}
+
+.accordion-header {
+  border-top: 1px  solid $gray-200;
+}
+
+.accordion-button:not(.collapsed) {
+  color: black;
+  background-color: #fff;
+  box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.125);
+}
+
+.accordion-body {
+  color: $gray-700;
+  font-size: 1.2rem;
+  padding: 1rem 1.25rem 1rem 4rem !important;
+
+  @include range-width(0, 440px) {
+    padding: 1rem 1.25rem !important;
+  }
+}
+
+.accordion-button::after {
+  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"/></svg>') !important;
+}
+
+.accordion-button:not(.collapsed)::after {
+    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8"/></svg>') !important;
+}
 
 
 
