第二類別處理1/2

--- a/scss/public.scss
+++ b/scss/public.scss
@@ -83,6 +83,7 @@ body {
 }
 
 a {
+  cursor: pointer;
   text-decoration: none !important;
 
   &:after, &:before {
@@ -247,6 +248,20 @@ hr {
 
 .accordion-button:not(.collapsed)::after {
     background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8"/></svg>') !important;
+}
+
+.nav-link {
+  &.tag-link {
+    cursor: pointer;
+    text-align: center;
+    font-size: 1.15rem !important;
+    color: #989898 !important;
+    background-color: white !important;
+
+    &.active {
+      color: black !important;
+    }
+  }
 }
 
 
