--- a/css/public.css
+++ b/css/public.css
@@ -3019,7 +3019,7 @@ html { font-size: 13px; }
 
 body { position: relative; display: inline-block; width: 100%; margin: 0; padding: 0; color: #000; font: normal 14px/20px "新細明體"; font-family: "nbk", "microsoft yahei","微軟正黑體",arial,sans-serif; font-family: "nbk", "微軟正黑體",arial,sans-serif; text-size-adjust: none; -webkit-text-size-adjust: none; background-color: white; }
 
-a { text-decoration: none !important; }
+a { cursor: pointer; text-decoration: none !important; }
 a:after, a:before { vertical-align: top !important; }
 a:hover { text-decoration: underline; }
 
@@ -3074,6 +3074,9 @@ hr { color: #adb5bd; opacity: 1; }
 .accordion-button::after { background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"/></svg>') !important; }
 
 .accordion-button:not(.collapsed)::after { background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8"/></svg>') !important; }
+
+.nav-link.tag-link { cursor: pointer; text-align: center; font-size: 1.15rem !important; color: #989898 !important; background-color: white !important; }
+.nav-link.tag-link.active { color: black !important; }
 
 .topboxs { display: inline-block; position: relative; z-index: 10; width: 100%; box-shadow: 1px 1px 10px 2px rgba(0, 0, 0, 0.1); }
 
