--- a/scss/public.scss
+++ b/scss/public.scss
@@ -264,6 +264,19 @@ hr {
   }
 }
 
+.card {
+  &.modus-mobile {
+    @include range-width(0, 770px) {
+      position: relative;
+      flex-direction: row !important;
+    }
+  }
+}
+
+.modal-footer {
+  border-top: 0 !important;
+}
+
 
 
 // boxs
@@ -331,6 +344,19 @@ hr {
   font-size: .9rem;
 }
 
+.flagBoxsBig {
+  width: 45px;
+  height: 45px;
+  line-height: 38px;
+  background-image: url(../images/flag.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
+  text-align: center;
+  font-size: 1rem;
+  float: right;
+}
+
 .logoboxs {
    @include range-width(0, 720px) {
     height: 20px;
@@ -369,12 +395,38 @@ hr {
   padding: 10px;
 }
 
+.modusTitile {
+
+  .modusTitileboxs {
+    display: inline-block;
+    width: calc(100% - 25px);
+    padding-left: 10px;
+
+    &.nowidth {
+      width: 100% !important;
+    }
+  }
+
+  &:before {
+    display: inline-block;
+    content: '';
+    width: 5px;
+    height: 50px;
+    background-color: black;
+  }
+}
+
 
 
 // font
 .f13 {
   color: $gray-500;
   font-size: 1rem;
+}
+
+.f16 {
+  color: $gray-600;
+  font-size: 1.2rem;
 }
 
 .f9 {
@@ -414,6 +466,41 @@ hr {
     margin-right: 5px;
   }
 }
+
+.limitTitle {
+  background-color: $main-blue;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  font-size: 1.3rem;
+}
+
+.modus-text {
+  color: black;
+  font-size: 1.1rem;
+
+  &:before {
+    display: inline-block;
+    content: attr(title);
+    font-weight: bold;
+    vertical-align: top !important;
+  }
+}
+
+.modus-text-red {
+  color: red;
+  font-size: 1.1rem;
+
+  &:before {
+    display: inline-block;
+    content: attr(title);
+    font-weight: bold;
+    vertical-align: top !important;
+    color: black;
+  }
+}
+
+
 
 
 // link
@@ -491,6 +578,26 @@ hr {
     color: white !important;
     background-color: $main-blue !important;
   }
+}
+
+
+
+// other
+.modus-img {
+  width: 100%;
+  height: 165px;
+
+  @include range-width(0, 770px) {
+    width: 30%;
+    // height: 160px;
+  }
+}
+
+.blackBar {
+  display: inline-block;
+  width: 3px;
+  height: 45px;
+  background-color: black;
 }
 
 
