--- a/css/public.css
+++ b/css/public.css
@@ -3050,6 +3050,16 @@ hr { color: #adb5bd; opacity: 1; }
 .swiper-button-next, .swiper-button-prev { color: white !important; opacity: .5 !important; }
 .swiper-button-next:hover, .swiper-button-prev:hover { opacity: 1 !important; }
 
+.swiper-tag { width: 100%; height: 55px; }
+
+.swiper-slide-tag { text-align: center; font-size: 18px; background: #fff; display: flex; justify-content: center; align-items: center; }
+
+.swiper-wrapper-tag { position: relative; width: 100%; height: 100%; z-index: 1; display: flex; transition-property: transform; transition-timing-function: var(--swiper-wrapper-transition-timing-function, initial); box-sizing: content-box; }
+
+.swiper-button-next-tag, .swiper-button-prev-tag { position: absolute; top: var(--swiper-navigation-top-offset, 50%); width: calc(var(--swiper-navigation-size) / 44* 27); height: var(--swiper-navigation-size); margin-top: calc(0px -(var(--swiper-navigation-size) / 2)); z-index: 10; cursor: pointer; display: flex; align-items: center; justify-content: center; color: black !important; }
+
+@media (max-width: 760px) { .swiper-button-next-tag { right: 20px; transform: rotate(90deg); }
+  .swiper-button-prev-tag { left: 20px; transform: rotate(-90deg); } }
 .ticket-nav { font-size: 1.2rem !important; color: black !important; background-color: transparent !important; border-radius: 0 !important; padding-bottom: 13px; padding-top: 0 !important; }
 .ticket-nav.active { color: #017eff !important; border-bottom: 2px solid #017eff; }
 
@@ -3156,6 +3166,13 @@ hr { color: #adb5bd; opacity: 1; }
 @media screen and (max-width: 769px) and (min-width: 0) { .modus-img { width: 30%; } }
 
 .blackBar { display: inline-block; width: 3px; height: 45px; background-color: black; }
+
+.numH { height: 95px; font-size: 3rem; text-align: center; }
+
+input[type=number]::-webkit-outer-spin-button, input[type=number]::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; }
+
+/* Firefox */
+input[type=number] { -moz-appearance: textfield; }
 
 .test-bg { background-color: rgba(0, 128, 0, 0.2); }
 
