--- a/scss/public.scss
+++ b/scss/public.scss
@@ -178,6 +178,60 @@ hr {
   }
 }
 
+// 小頁籤
+.swiper-tag {
+  width: 100%;
+  height: 55px;
+}
+
+.swiper-slide-tag {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-wrapper-tag {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  display: flex;
+  transition-property: transform;
+  transition-timing-function: var(--swiper-wrapper-transition-timing-function, initial);
+  box-sizing: content-box;
+}
+
+.swiper-button-next-tag, .swiper-button-prev-tag {
+  position: absolute;
+  top: var(--swiper-navigation-top-offset, 50%);
+  width: calc(var(--swiper-navigation-size) / 44* 27);
+  height: var(--swiper-navigation-size);
+  margin-top: calc(0px -(var(--swiper-navigation-size) / 2));
+  z-index: 10;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: black !important;
+  // color: var(--swiper-navigation-color, var(--swiper-theme-color));
+}
+
+
+@media (max-width: 760px) {
+  .swiper-button-next-tag {
+    right: 20px;
+    transform: rotate(90deg);
+  }
+
+  .swiper-button-prev-tag {
+    left: 20px;
+    transform: rotate(-90deg);
+  }
+}
+
 
 
 // bo
@@ -598,6 +652,22 @@ hr {
   width: 3px;
   height: 45px;
   background-color: black;
+}
+
+.numH {
+  height: 95px;
+  font-size: 3rem;
+  text-align: center;
+}
+
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
 
 
