--- a/css/public.css
+++ b/css/public.css
@@ -3049,6 +3049,7 @@ hr { color: #adb5bd; opacity: 1; }
 
 .swiper-button-next, .swiper-button-prev { color: white !important; opacity: .5 !important; }
 .swiper-button-next:hover, .swiper-button-prev:hover { opacity: 1 !important; }
+.swiper-button-next.swiper-button-next-tag, .swiper-button-next .swiper-button-prev-tag, .swiper-button-prev.swiper-button-next-tag, .swiper-button-prev .swiper-button-prev-tag { font-size: 20px !important; }
 
 .swiper-tag { width: 100%; height: 55px; }
 
@@ -3058,8 +3059,8 @@ hr { color: #adb5bd; opacity: 1; }
 
 .swiper-button-next-tag, .swiper-button-prev-tag { position: absolute; top: var(--swiper-navigation-top-offset, 50%); width: calc(var(--swiper-navigation-size) / 44* 27); height: var(--swiper-navigation-size); margin-top: calc(0px -(var(--swiper-navigation-size) / 2)); z-index: 10; cursor: pointer; display: flex; align-items: center; justify-content: center; color: black !important; }
 
-@media (max-width: 760px) { .swiper-button-next-tag { right: 20px; transform: rotate(90deg); }
-  .swiper-button-prev-tag { left: 20px; transform: rotate(-90deg); } }
+@media (max-width: 760px) { .swiper-button-next-tag { right: 20px; transform: rotate(0deg); }
+  .swiper-button-prev-tag { left: 20px; transform: rotate(0deg); } }
 .ticket-nav { font-size: 1.2rem !important; color: black !important; background-color: transparent !important; border-radius: 0 !important; padding-bottom: 13px; padding-top: 0 !important; }
 .ticket-nav.active { color: #017eff !important; border-bottom: 2px solid #017eff; }
 
