--- a/css/public.css
+++ b/css/public.css
@@ -3105,7 +3105,9 @@ hr { color: #adb5bd; opacity: 1; }
 
 .memberBoxsTitle { display: inline-block; width: 100%; background-image: url(../images/doll-bg.png); background-repeat: repeat; }
 
-.mainboxs { width: 100%; max-width: 990px; margin: 0 auto; }
+.mainboxs { width: 100%; margin: 0 auto; }
+
+.w990 { max-width: 990px; margin: 0 auto; }
 
 .iteam-imgboxs01 { display: inline-block; width: 100%; height: 160px; }
 
@@ -3172,9 +3174,14 @@ hr { color: #adb5bd; opacity: 1; }
 .modus-img { width: 100%; height: 165px; }
 @media screen and (max-width: 769px) and (min-width: 0) { .modus-img { width: 30%; } }
 
+.modus-img-my { width: 100%; height: 165px; }
+@media screen and (max-width: 769px) and (min-width: 0) { .modus-img-my { display: inline-block !important; width: 100%; height: 165px; } }
+
 .blackBar { display: inline-block; width: 3px; height: 45px; background-color: black; }
 
 .numH { height: 95px; font-size: 3rem; text-align: center; }
+
+.h40 { height: 40px; display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 2; overflow: hidden; text-overflow: ellipsis; }
 
 input[type=number]::-webkit-outer-spin-button, input[type=number]::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; }
 
