--- a/css/public.css
+++ b/css/public.css
@@ -3074,8 +3074,12 @@ hr { color: #adb5bd; opacity: 1; }
 
 .form-control:focus { border-color: #ced4da !important; box-shadow: 0 0 0 0rem rgba(1, 126, 255, 0.25) !important; }
 
-.offcanvas-top { top: 665px; }
-@media screen and (max-width: 769px) and (min-width: 0) { .offcanvas-top { top: 155px; } }
+.offcanvas-top { height: 16vh !important; }
+@media screen and (max-width: 1199px) and (min-width: 935px) { .offcanvas-top { height: 30vh !important; } }
+@media screen and (max-width: 934px) and (min-width: 770px) { .offcanvas-top { height: 65vh !important; } }
+@media screen and (max-width: 769px) and (min-width: 415px) { .offcanvas-top { height: 50vh !important; } }
+@media screen and (max-width: 414px) and (min-width: 375px) { .offcanvas-top { height: 50vh !important; } }
+@media screen and (max-width: 374px) and (min-width: 0) { .offcanvas-top { height: 65vh !important; } }
 
 .accordion-item { border: 0 !important; }
 
@@ -3108,6 +3112,8 @@ hr { color: #adb5bd; opacity: 1; }
 .mainboxs { width: 100%; margin: 0 auto; }
 
 .w990 { max-width: 990px; margin: 0 auto; }
+
+.w990-d { width: 100%; max-width: 990px; margin: 0 auto; }
 
 .iteam-imgboxs01 { display: inline-block; width: 100%; height: 160px; }
 
@@ -3152,6 +3158,9 @@ hr { color: #adb5bd; opacity: 1; }
 
 .modus-text-red { color: red; font-size: 1.1rem; }
 .modus-text-red:before { display: inline-block; content: attr(title); font-weight: bold; vertical-align: top !important; color: black; }
+
+.search-type { font-size: 1.3rem; font-weight: bold; color: black; }
+.search-type:before { display: inline-block; content: ''; width: 3px; height: 20px; background-color: black; vertical-align: bottom; margin-right: 10px; }
 
 .social-font { font-size: 1.8rem; color: black; }
 .social-font.youtube { font-size: 2rem; margin-top: 5px; }
