--- a/css/public.css
+++ b/css/public.css
@@ -3115,7 +3115,8 @@ hr { color: #adb5bd; opacity: 1; }
 
 .w990 { max-width: 990px; margin: 0 auto; }
 
-@media screen and (max-width: 379px) and (min-width: 0) { .w240 { max-width: 240px; } }
+.w240 { display: inline-block; }
+@media screen and (max-width: 439px) and (min-width: 0) { .w240 { display: inline-block; max-width: 240px; } }
 
 .w990-d { width: 100%; max-width: 990px; margin: 0 auto; }
 
@@ -3157,7 +3158,7 @@ hr { color: #adb5bd; opacity: 1; }
 
 .limitTitle { background-color: #017eff; color: white; text-align: center; padding: 10px; font-size: 1.3rem; }
 
-.modus-text { color: black; font-size: 1.1rem; }
+.modus-text { color: black; height: 43px; font-size: 1.1rem; display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 2; overflow: hidden; text-overflow: ellipsis; }
 .modus-text:before { display: inline-block; content: attr(title); font-weight: bold; vertical-align: top !important; }
 
 .modus-text-red { color: red; font-size: 1.1rem; }
@@ -3181,11 +3182,11 @@ hr { color: #adb5bd; opacity: 1; }
 .moreBtn { font-size: 1.1rem; padding: 8px 20px; border: 1px solid #e9ecef; background: linear-gradient(#f6f4f5, #f5f5f5, #eeeff1); }
 .moreBtn:hover { color: #017eff; background: linear-gradient(#eeeff1, #f5f5f5, #f6f4f5); }
 
-.btn-black { border-radius: 0 !important; background-color: black; color: white; font-size: 1.2rem; }
+.btn-black { border-radius: 0 !important; background-color: black; color: white; font-size: 1.1rem; }
 .btn-black:hover { color: white !important; background-color: #017eff !important; }
 
 .modus-img { width: 100%; height: 165px; }
-@media screen and (max-width: 769px) and (min-width: 0) { .modus-img { width: 30%; } }
+@media screen and (max-width: 769px) and (min-width: 0) { .modus-img { width: 30%; height: 190px; } }
 
 .modus-img-my { width: 100%; height: 165px; }
 @media screen and (max-width: 769px) and (min-width: 0) { .modus-img-my { display: inline-block !important; width: 100%; height: 165px; } }
