--- a/scss/public.scss
+++ b/scss/public.scss
@@ -430,8 +430,10 @@ hr {
 }
 
 .w240 {
+  display: inline-block;
 
-  @include range-width(0, 380px) {
+  @include range-width(0, 440px) {
+    display: inline-block;
     max-width: 240px;
   }
 
@@ -612,7 +614,13 @@ hr {
 
 .modus-text {
   color: black;
+  height: 43px;
   font-size: 1.1rem;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+  text-overflow: ellipsis;
 
   &:before {
     display: inline-block;
@@ -723,7 +731,7 @@ hr {
   border-radius: 0 !important;
   background-color: black;
   color: white;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 
   &:hover {
     color: white !important;
@@ -740,7 +748,7 @@ hr {
 
   @include range-width(0, 770px) {
     width: 30%;
-    // height: 160px;
+    height: 190px;
   }
 }
 
