--- a/css/public.css
+++ b/css/public.css
@@ -3015,9 +3015,9 @@ textarea.form-control-lg { min-height: calc(1.5em + (1rem + 2px)); }
 
 .ztop { z-index: 1050 !important; }
 
-html { font-size: 13px; }
+html { font-size: 14px; }
 
-body { position: relative; display: inline-block; width: 100%; margin: 0; padding: 0; color: #000; font: normal 14px/20px "新細明體"; font-family: "nbk", "microsoft yahei","微軟正黑體",arial,sans-serif; font-family: "nbk", "微軟正黑體",arial,sans-serif; text-size-adjust: none; -webkit-text-size-adjust: none; background-color: white; }
+body { position: relative; display: inline-block; width: 100%; margin: 0; padding: 0; color: #000; font-family: "nbk", "microsoft yahei","微軟正黑體",arial,sans-serif; font-family: "nbk", "微軟正黑體",arial,sans-serif; line-height: 26px; text-size-adjust: none; -webkit-text-size-adjust: none; background-color: white; }
 
 a { cursor: pointer; text-decoration: none !important; }
 a:after, a:before { vertical-align: top !important; }
@@ -3065,6 +3065,8 @@ hr { color: #adb5bd; opacity: 1; }
 
 @media (max-width: 760px) { .swiper-button-next-tag { right: 20px; transform: rotate(0deg); }
   .swiper-button-prev-tag { left: 20px; transform: rotate(0deg); } }
+.card-text { font-size: 1.25rem; }
+
 .ticket-nav { font-size: 1.2rem !important; color: black !important; background-color: transparent !important; border-radius: 0 !important; padding-bottom: 13px; padding-top: 0 !important; }
 .ticket-nav.active { color: #017eff !important; border-bottom: 2px solid #017eff; }
 
@@ -3096,14 +3098,16 @@ hr { color: #adb5bd; opacity: 1; }
 
 .accordion-button:not(.collapsed)::after { background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8"/></svg>') !important; }
 
-.nav-link.tag-link { cursor: pointer; text-align: center; font-size: 1.15rem !important; color: #989898 !important; background-color: transparent !important; }
+.nav-link.tag-link { cursor: pointer; text-align: center; font-size: 1.1rem !important; color: #989898 !important; background-color: transparent !important; }
 .nav-link.tag-link.active { color: black !important; }
-.nav-link.tag-link-login { cursor: pointer; text-align: center; font-size: 1.15rem !important; color: #989898 !important; background-color: white !important; }
+.nav-link.tag-link-login { cursor: pointer; text-align: center; font-size: 1.1rem !important; color: #989898 !important; background-color: white !important; }
 .nav-link.tag-link-login.active { color: #017eff !important; }
 
 @media screen and (max-width: 769px) and (min-width: 0) { .card.modus-mobile { position: relative; flex-direction: row !important; } }
 
 .modal-footer { border-top: 0 !important; }
+
+.card-s { display: inline-block; width: 100%; border: 1px solid rgba(0, 0, 0, 0.125); border-radius: 0.25rem; padding: 14px; }
 
 .topboxs { display: inline-block; position: relative; z-index: 10; width: 100%; box-shadow: 1px 1px 10px 2px rgba(0, 0, 0, 0.1); }
 
@@ -3143,25 +3147,30 @@ hr { color: #adb5bd; opacity: 1; }
 .modusTitile .modusTitileboxs.nowidth { width: 100% !important; }
 .modusTitile:before { display: inline-block; content: ''; width: 5px; height: 50px; background-color: black; }
 
-.f13 { color: #adb5bd; font-size: 1rem; }
+.used-type { display: inline-block; border: 3px solid white; padding: 10px 20px; font-size: 1.2rem; font-weight: bold; color: white; }
+@media screen and (max-width: 1199px) and (min-width: 0) { .used-type { width: 80%; border: 2px solid white; padding: 0; font-size: 1rem; text-align: center; } }
+
+.f13 { color: #adb5bd; font-size: .9rem; }
 
 .f16 { color: #6c757d; font-size: 1.2rem; }
 
 .f9 { font-size: .9rem; }
 
-.cupon-text { display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 3; overflow: hidden; text-overflow: ellipsis; font-size: 1rem; height: 60px; }
+.used { display: inline-block; color: #989898; }
+
+.cupon-text { display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 2; overflow: hidden; text-overflow: ellipsis; font-size: 1.1rem; height: 42px; line-height: 20px; }
 
 .label-text { border-radius: 0 !important; background-color: transparent !important; color: #adb5bd; border: 1px solid #adb5bd; }
 
 .searchText { display: inline-block; width: 100%; font-size: 1.3rem; color: black; }
 .searchText:before { display: inline-block; vertical-align: top; content: ''; width: 3px; height: 20px; background-color: black; margin-right: 5px; }
 
-.limitTitle { background-color: #017eff; color: white; text-align: center; padding: 10px; font-size: 1.3rem; }
+.limitTitle { background-color: black; color: white; text-align: center; padding: 10px; font-size: 1.3rem; }
 
 .modus-text { color: black; height: 43px; font-size: 1.1rem; display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 2; overflow: hidden; text-overflow: ellipsis; }
 .modus-text:before { display: inline-block; content: attr(title); font-weight: bold; vertical-align: top !important; }
 
-.modus-text-red { color: red; font-size: 1.1rem; }
+.modus-text-red { color: red; font-size: 1rem; }
 .modus-text-red:before { display: inline-block; content: attr(title); font-weight: bold; vertical-align: top !important; color: black; }
 
 .search-type { font-size: 1.3rem; font-weight: bold; color: black; }
@@ -3173,11 +3182,14 @@ hr { color: #adb5bd; opacity: 1; }
 @media screen and (max-width: 719px) and (min-width: 0) { .social-font.h-arrow { font-size: 1.6rem; } }
 .social-font:hover { color: #6c757d; }
 
-.footerlink { font-size: 1.2rem; color: #343a40; }
+.footerlink { font-size: 1rem; color: #343a40; }
 .footerlink:after { display: inline-block; content: '|'; padding: 0 10px; vertical-align: baseline !important; }
 .footerlink:hover { color: #6c757d; }
 .footerlink:hover:after { color: black; }
 .footerlink:last-child:after { display: none; }
+
+.btn { padding: 0.375rem 0 !important; }
+@media screen and (max-width: 449px) and (min-width: 0) { .btn { font-size: 1rem !important; } }
 
 .moreBtn { font-size: 1.1rem; padding: 8px 20px; border: 1px solid #e9ecef; background: linear-gradient(#f6f4f5, #f5f5f5, #eeeff1); }
 .moreBtn:hover { color: #017eff; background: linear-gradient(#eeeff1, #f5f5f5, #f6f4f5); }
@@ -3185,13 +3197,15 @@ hr { color: #adb5bd; opacity: 1; }
 .btn-black { border-radius: 0 !important; background-color: black; color: white; font-size: 1.1rem; }
 .btn-black:hover { color: white !important; background-color: #017eff !important; }
 
+.opa50 { opacity: .4; }
+
 .modus-img { width: 100%; height: 165px; }
 @media screen and (max-width: 769px) and (min-width: 0) { .modus-img { width: 30%; height: 190px; } }
 
 .modus-img-my { width: 100%; height: 165px; }
 @media screen and (max-width: 769px) and (min-width: 0) { .modus-img-my { display: inline-block !important; width: 100%; height: 165px; } }
 
-.blackBar { display: inline-block; width: 3px; height: 45px; background-color: black; }
+.blackBar { display: inline-block; width: 3px; height: 55px; background-color: black; }
 
 .numH { height: 95px; font-size: 3rem; text-align: center; }
 
@@ -3201,7 +3215,3 @@ input[type=number]::-webkit-outer-spin-button, input[type=number]::-webkit-inner
 
 /* Firefox */
 input[type=number] { -moz-appearance: textfield; }
-
-.test-bg { background-color: rgba(0, 128, 0, 0.2); }
-
-.test-border { border: 1px solid rgba(255, 0, 0, 0.3); }
