--- a/css/public.css
+++ b/css/public.css
@@ -3098,6 +3098,7 @@ hr { color: #adb5bd; opacity: 1; }
 
 .accordion-button:not(.collapsed)::after { background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8"/></svg>') !important; }
 
+.nav-link { padding: 0.5rem .8rem !important; }
 .nav-link.tag-link { cursor: pointer; text-align: center; font-size: 1.1rem !important; color: #989898 !important; background-color: transparent !important; }
 .nav-link.tag-link.active { color: black !important; }
 .nav-link.tag-link-login { cursor: pointer; text-align: center; font-size: 1.1rem !important; color: #989898 !important; background-color: white !important; }
@@ -3174,7 +3175,7 @@ hr { color: #adb5bd; opacity: 1; }
 .modus-text-red:before { display: inline-block; content: attr(title); font-weight: bold; vertical-align: top !important; color: black; }
 
 .search-type { font-size: 1.3rem; font-weight: bold; color: black; }
-.search-type:before { display: inline-block; content: ''; width: 3px; height: 20px; background-color: black; vertical-align: bottom; margin-right: 10px; }
+.search-type:before { display: inline-block; content: ''; width: 3px; height: 26px; background-color: black; vertical-align: bottom; margin-right: 10px; }
 
 .social-font { font-size: 1.8rem; color: black; }
 .social-font.youtube { font-size: 2rem; margin-top: 5px; }
